--- a/cmd/frontend/helpers/email/templates/_header.gohtml
+++ b/cmd/frontend/helpers/email/templates/_header.gohtml
@@ -1,7 +1,7 @@
 {{define "header"}}
 
     <h2>
-        <img src="https://gamedb.online/assets/img/sa-500x500.png" alt="Global Steam" style="height: 30px; vertical-align: middle;" height="30">
+        <img src="https://globalsteam.online/assets/img/sa-500x500.png" alt="Global Steam" style="height: 30px; vertical-align: middle;" height="30">
         Global Steam
     </h2>
 
