--- a/cmd/frontend/helpers/email/templates/forgot_missing.gohtml
+++ b/cmd/frontend/helpers/email/templates/forgot_missing.gohtml
@@ -3,7 +3,7 @@
 
     <p>You or someone else has requested a new password for Global Steam</p>
     <p>We could not find an account with the email "{{ .Email }}", but you can create one here:</p>
-    <p><a href="https://gamedb.online/signup">https://gamedb.online/signup</a></p>
+    <p><a href="https://globalsteam.online/signup">globalsteam.online/signup</a></p>
 
     {{ template "footer" . }}
 {{end}}
