--- a/cmd/frontend/helpers/email/templates/signup.gohtml
+++ b/cmd/frontend/helpers/email/templates/signup.gohtml
@@ -5,7 +5,7 @@
     <p>Please check out the following:</p>
     <ul>
         <li><a href="https://twitter.com/gamedb_online">Twitter</a></li>
-        <li><a href="https://gamedb.online/discord-server">Discord</a></li>
+        <li><a href="https://globalsteam.online/discord-server">Discord</a></li>
         <li><a href="https://www.patreon.com/jleagle">Patreon</a></li>
         <li><a href="https://github.com/gamedb">GitHub</a></li>
     </ul>
