--- a/cmd/frontend/templates/includes/header.gohtml
+++ b/cmd/frontend/templates/includes/header.gohtml
@@ -36,7 +36,7 @@
     <meta name="description" content="{{ .Description }}">
 
     <link rel="canonical" href="{{ .GetCanonical }}"/>
-    <link rel="sitemap" href="https://gamedb.online/sitemap.xml" type="application/xml"/>
+    <link rel="sitemap" href="https://globalsteam.online/sitemap.xml" type="application/xml"/>
 
     <meta name="robots" content="index,follow"><!-- All Search Engines -->
     <meta name="googlebot" content="index,follow"><!-- Google Specific -->
