--- a/cmd/frontend/templates/includes/social.gohtml
+++ b/cmd/frontend/templates/includes/social.gohtml
@@ -3,10 +3,10 @@
     <div class="social-buttons">
 
         <div class="mb-1">
-            <div class="fb-like" data-href="https://gamedb.online{{ .GetPath }}" data-layout="button" data-action="like" data-show-faces="false" data-share="false"></div>
+            <div class="fb-like" data-href="https://globalsteam.online{{ .GetPath }}" data-layout="button" data-action="like" data-show-faces="false" data-share="false"></div>
         </div>
         <div>
-            <a class="twitter-share-button" href="https://twitter.com/intent/tweet?text={{ .GetName }}" data-url="https://gamedb.online{{ .GetPath }}"></a>
+            <a class="twitter-share-button" href="https://twitter.com/intent/tweet?text={{ .GetName }}" data-url="https://globalsteam.online{{ .GetPath }}"></a>
         </div>
 
     </div>
