Use absolute paths

--- a/cmd/frontend/templates/dlc.gohtml
+++ b/cmd/frontend/templates/dlc.gohtml
@@ -17,7 +17,7 @@
                 {{ if .IsLoggedIn }}
                     {{ if eq .PlayerID 0}}
                         <div class="alert alert-primary" role="alert">
-                            <div>You must <a href="/oauth/out/steam?page=settings">link</a> your Steam account to see your games</div>
+                            <div>You must <a href="https://globalsteam.online/oauth/out/steam?page=settings">link</a> your Steam account to see your games</div>
                         </div>
                     {{ end }}
                 {{ else }}
