Reroute api page

--- a/cmd/frontend/templates/api.gohtml
+++ b/cmd/frontend/templates/api.gohtml
@@ -23,7 +23,7 @@
 
                 <ul class="nav nav-tabs card-header-tabs nav-fill-mobile">
                     <li class="nav-item">
-                        <a class="nav-link {{ if eq .Spec "gamedb" }}active{{ end }}" href="/api/gamedb" role="tab">Global Steam</a>
+                        <a class="nav-link {{ if eq .Spec "globalsteam" }}active{{ end }}" href="/api/globalsteam" role="tab">Global Steam</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link {{ if eq .Spec "steam" }}active{{ end }}" href="/api/steam" role="tab">Steam</a>
