Update api header

--- a/cmd/frontend/templates/api.gohtml
+++ b/cmd/frontend/templates/api.gohtml
@@ -5,13 +5,14 @@
 
         <div class="jumbotron">
 
-            <h1><i class="fas fa-book-reader"></i> {{ .TitleOnly }}</h1>
-
-            {{ if eq .Spec "gamedb" }}
+            {{ if eq .Spec "globalsteam" }}
+                <h1><i class="fas fa-book-reader"></i> Global Steam API Docs</h1>
                 <p class="lead">
-                    <small>If you need anything that is not in the Global Steam API yet, please <a href="/contact">contact</a> me.</small><br>
+                    <small>If you need something that is missing from our API, please <a href="/contact">contact</a> me.</small><br>
                     <small>The Global Steam API is currently open to donators only to help pay for hosting costs.</small>
                 </p>
+            {{ else }}
+                <h1><i class="fas fa-book-reader"></i> Steam API Docs</h1>
             {{ end }}
 
         </div>
