--- a/cmd/frontend/templates/experience.gohtml
+++ b/cmd/frontend/templates/experience.gohtml
@@ -46,7 +46,7 @@
                                 <th scope="col">End XP</th>
                                 <th scope="col">For Next Level</th>
                                 <th scope="col">Friends Max</th>
-                                <th scope="col" data-toggle="tooltip" data-placement="top" title="Global Steam Players">Players</th>
+                                <th scope="col">GS Players</th>
                             </tr>
                             </thead>
                             {{ range $keyx, $valuex := $value }}
