--- a/cmd/frontend/templates/achievements.gohtml
+++ b/cmd/frontend/templates/achievements.gohtml
@@ -15,7 +15,7 @@
 
                     <div class="input-group input-group-lg mt-1 mb-2">
                         <input class="form-control" type="search" name="search" placeholder="Search for a Game" id="search" autofocus data-col-sort="2">
-                        <label for="search" class="sr-only sr-only-focusable">Search for a Game</label>
+                        <label for="search" class="sr-only sr-only-focusable">Search for achievements</label>
                         <div class="input-group-append">
                             <input type="submit" value="Search" class="input-group-text">
                         </div>
