--- a/cmd/frontend/templates/badges.gohtml
+++ b/cmd/frontend/templates/badges.gohtml
@@ -5,6 +5,7 @@
 
         <div class="jumbotron">
             <h1><i class="fas fa-ribbon"></i> Badges</h1>
+            <p class="lead">{{ .Description }}</p>
         </div>
 
         {{ template "flashes" . }}
