Show max discount

--- a/cmd/frontend/templates/stats_list.gohtml
+++ b/cmd/frontend/templates/stats_list.gohtml
@@ -37,11 +37,12 @@
                         <thead class="thead-light">
                         <tr>
                             <th scope="col">{{ .Type.Title }}</th>
-                            <th style="width: 12%;" scope="col">Games</th>
-                            <th style="width: 12%;" scope="col">Games %</th>
-                            <th style="width: 12%;" scope="col">Mean Price</th>
-                            <th style="width: 12%;" scope="col">Mean Score</th>
-                            <th style="width: 12%;" scope="col">Mean Players</th>
+                            <th style="width: 10%;" scope="col">Games</th>
+                            <th style="width: 10%;" scope="col">Games %</th>
+                            <th style="width: 10%;" scope="col">Mean Price</th>
+                            <th style="width: 10%;" scope="col">Mean Score</th>
+                            <th style="width: 10%;" scope="col">Mean Players</th>
+                            <th style="width: 10%;" scope="col">Max Discount</th>
                         </tr>
                         </thead>
                         <tbody>
