Show discount on stats pages

--- a/cmd/frontend/templates/stat.gohtml
+++ b/cmd/frontend/templates/stat.gohtml
@@ -36,6 +36,7 @@
                             <th>Game</th>
                             <th>Players</th>
                             <th>Price</th>
+                            <th>Discount</th>
                             <th>Score</th>
                             <th class="thin"></th>
                         </tr>
