--- a/cmd/frontend/templates/app.gohtml
+++ b/cmd/frontend/templates/app.gohtml
@@ -850,8 +850,8 @@
                             <i class="fas fa-spinner fa-spin"></i>
                         </div>
 
-                        <h5>Similar by Tag</h5>
-                        <div class="table-responsive" id="similar-tags-wrapper">
+                        <h5>Similar by Tags</h5>
+                        <div class="table-responsive" id="similar-tags">
                             <i class="fas fa-spinner fa-spin"></i>
                         </div>
 
@@ -1009,7 +1009,7 @@
                                                     <td>{{ .App.GetPICSUpdatedNice }}</td>
                                                 </tr>
                                                 <tr data-raw="{{ htmlEscape .App.GetUpdatedNice }}">
-                                                    <td>updated_game_db</td>
+                                                    <td>updated_global_steam</td>
                                                     <td>Other</td>
                                                     <td>{{ .App.GetUpdatedNice }}</td>
                                                 </tr>
