--- a/cmd/frontend/templates/package.gohtml
+++ b/cmd/frontend/templates/package.gohtml
@@ -281,7 +281,7 @@
                                                     <td>{{ .Package.GetPICSUpdatedNice }}</td>
                                                 </tr>
                                                 <tr>
-                                                    <td class="thin">updated_game_db</td>
+                                                    <td class="thin">updated_global_steam</td>
                                                     <td>Other</td>
                                                     <td>{{ .Package.GetUpdatedNice }}</td>
                                                 </tr>
