Show search score

--- a/cmd/frontend/templates/players.gohtml
+++ b/cmd/frontend/templates/players.gohtml
@@ -89,7 +89,7 @@
                             <th scope="col">Received Points</th>
                             {{/* Below two must be last */}}
                             <th scope="col"><i class="fas fa-link"></i></th>
-                            <th scope="col">Search Score</th>
+                            <th scope="col">Score</th>
                         </tr>
                         </thead>
                         <tbody>
