Only show new players on home

--- a/cmd/frontend/templates/home.gohtml
+++ b/cmd/frontend/templates/home.gohtml
@@ -213,7 +213,7 @@
 
                     <div class="card-header">
                         <h5 class="mb-0">
-                            Latest Updated
+                            New Players
                             <span class="badge badge-secondary float-right" id="live-badge">Live</span>
                         </h5>
                     </div>
@@ -225,7 +225,7 @@
                                 <thead class="thead-light">
                                 <tr>
                                     <th scope="col">Player</th>
-                                    <th scope="col">Updated</th>
+                                    <th scope="col">Added</th>
                                     <th scope="col"></th>
                                 </tr>
                                 </thead>
