Update donate page

--- a/cmd/frontend/templates/donate.gohtml
+++ b/cmd/frontend/templates/donate.gohtml
@@ -113,26 +113,26 @@
                             </div>
                         </div>
 
-                        <div class="card">
-                            <div class="card-header">Recent Donations</div>
-                            <div class="card-body p-0">
+                        {{/*                        <div class="card">*/}}
+                        {{/*                            <div class="card-header">Recent Donations</div>*/}}
+                        {{/*                            <div class="card-body p-0">*/}}
 
-                                <div class="table-responsive">
-                                    <table class="table table-no-border table-hover table-striped mb-0" data-ordering="false" id="new-donations" data-path="/donate/latest.json">
-                                        <thead class="thead-light">
-                                        <tr>
-                                            <th scope="col">Player</th>
-                                            <th scope="col">Donation</th>
-                                        </tr>
-                                        </thead>
-                                        <tbody>
+                        {{/*                                <div class="table-responsive">*/}}
+                        {{/*                                    <table class="table table-no-border table-hover table-striped mb-0" data-ordering="false" id="new-donations" data-path="/donate/latest.json">*/}}
+                        {{/*                                        <thead class="thead-light">*/}}
+                        {{/*                                        <tr>*/}}
+                        {{/*                                            <th scope="col">Player</th>*/}}
+                        {{/*                                            <th scope="col">Donation</th>*/}}
+                        {{/*                                        </tr>*/}}
+                        {{/*                                        </thead>*/}}
+                        {{/*                                        <tbody>*/}}
 
-                                        </tbody>
-                                    </table>
-                                </div>
+                        {{/*                                        </tbody>*/}}
+                        {{/*                                    </table>*/}}
+                        {{/*                                </div>*/}}
 
-                            </div>
-                        </div>
+                        {{/*                            </div>*/}}
+                        {{/*                        </div>*/}}
 
                     </div>
                 </div>
