--- a/cmd/frontend/templates/app.gohtml
+++ b/cmd/frontend/templates/app.gohtml
@@ -258,12 +258,12 @@
                                     {{ end  }}
                                 </div>
 
-                                <div class="card mt-3">
+                                <div class="card mt-3" id="same-owners-small-wrapper">
                                     <h5 class="card-header">Same Owners</h5>
                                     <div class="card-body p-0">
                                         <div class="table-responsive">
                                             <table class="table table-hover table-striped" data-row-type="games" data-ordering="false" id="similar-owners-small" data-path="/games/{{ .App.ID }}/same-owners.json?small=1">
-                                                <thead class="thead-light">
+                                                <thead class="thead-light d-none">
                                                 <tr>
                                                     <th>Game</th>
                                                 </tr>
