New patreon message

--- a/cmd/frontend/templates/includes/header.gohtml
+++ b/cmd/frontend/templates/includes/header.gohtml
@@ -241,9 +241,11 @@
                         </div>
                     </li>
 
-                    <li class="nav-item {{if startsWith .Path "/donate" }}active{{end}}">
-                        <a class="nav-link" href="/donate"><i class="fas fa-heart text-danger"></i> Donate</a>
-                    </li>
+                    {{ if .ShowAds }}
+                        <li class="nav-item {{if startsWith .Path "/donate" }}active{{end}} {{ if not (.GetCookieFlag "patreon-message") }}d-none{{end }}" id="patreon-link">
+                            <a class="nav-link" href="/donate"><i class="fas fa-heart text-danger"></i> Donate</a>
+                        </li>
+                    {{ end }}
 
                     {{ if .IsAdmin }}
                         <li class="nav-item {{if startsWith .Path "/admin" }}active{{end}}">
@@ -314,6 +316,14 @@
             </div>
         </nav>
     </div>
+
+    {{ if .ShowPatreonMessage }}
+        <a class="{{ if (.GetCookieFlag "patreon-message") }}d-none{{end }}" id="patreon-message" href="/donate"
+           style="display: block; color: red; text-align: center; position:relative; margin-top: -8px; margin-bottom: 4px; text-shadow: 0 0 10px #1b2738, 0 0 10px #1b2738;">
+            Subscribe to our Patreon to support new features and hosting costs! <i class="fas fa-times"></i>
+        </a>
+    {{ end }}
+
 </header>
 
 {{/*<div id="ad-top" class="container"></div>*/}}
