--- a/cmd/frontend/templates/player.gohtml
+++ b/cmd/frontend/templates/player.gohtml
@@ -183,11 +183,11 @@
                             </div>
                             <div class="col-sm-12 col-lg-4">
 
-                                {{ if .ShowAds }}
-                                    <a href="https://www.patreon.com/bePatron?u=9962078" target="_blank" rel="noopener">
-                                        <img src="/assets/img/patreon.png" alt="Patreon" id="patreon">
-                                    </a>
-                                {{ end }}
+                                {{/*                                {{ if .ShowAds }}*/}}
+                                {{/*                                    <a href="https://www.patreon.com/bePatron?u=9962078" target="_blank" rel="noopener">*/}}
+                                {{/*                                        <img src="/assets/img/patreon.png" alt="Patreon" id="patreon">*/}}
+                                {{/*                                    </a>*/}}
+                                {{/*                                {{ end }}*/}}
 
                                 <div class="card mb-3">
                                     <h5 class="card-header">Aliases</h5>
