Cache home news & upcoming

--- a/cmd/frontend/templates/home.gohtml
+++ b/cmd/frontend/templates/home.gohtml
@@ -242,7 +242,7 @@
             <div class="col-12">
 
                 <div class="card" id="news">
-
+                    <i class="fas fa-spinner fa-spin"></i>
                 </div>
 
             </div>
