Update donate page

--- a/cmd/frontend/templates/donate.gohtml
+++ b/cmd/frontend/templates/donate.gohtml
@@ -32,57 +32,37 @@
 
                         <div class="card mb-3">
                             <h5 class="card-header">Level 1<span class="float-right">$1 <small>/m</small></span></h5>
-                            <div class="card-body p-0">
-                                <table class="table table-no-border m-0">
-                                    <tr>
-                                        <td><i class="fas fa-star text-warning"></i> No ads</td>
-                                    </tr>
-                                    <tr>
-                                        <td><i class="fas fa-star text-warning"></i> Donator flair</td>
-                                    </tr>
-                                    <tr>
-                                        <td><i class="fas fa-star text-warning"></i> Your name in the hall of fame</td>
-                                    </tr>
-                                </table>
+                            <div class="card-body">
+                                <ul>
+                                    <li><i class="fas fa-star text-warning"></i> No ads</li>
+                                    <li><i class="fas fa-star text-warning"></i> Donator flair</li>
+                                    <li><i class="fas fa-star text-warning"></i> Your name in the hall of fame</li>
+                                </ul>
                             </div>
                             <a class="card-footer" href="https://www.patreon.com/join/jleagle/checkout?rid=2431311" target="_blank" rel="noopener">Donate</a>
                         </div>
 
                         <div class="card mb-3">
                             <h5 class="card-header">Level 2<span class="float-right">$3 <small>/m</small></span></h5>
-                            <div class="card-body p-0">
-                                <table class="table table-no-border m-0">
-                                    <tr>
-                                        <td><i class="fas fa-star text-warning"></i> <a href="/api">API</a> access</td>
-                                    </tr>
-                                    <tr>
-                                        <td><i class="fas fa-star text-warning"></i> Unlimited Access</td>
-                                    </tr>
-                                    <tr>
-                                        <td><i class="fas fa-star text-warning"></i> Automatic profile/group updates</td>
-                                    </tr>
-                                    <tr>
-                                        <td><i class="fas fa-star text-warning"></i> Quicker manual profile updates</td>
-                                    </tr>
-                                    <tr>
-                                        <td><i class="fas fa-star text-warning"></i> Quick add friends</td>
-                                    </tr>
-                                </table>
+                            <div class="card-body">
+                                <ul>
+                                    <li><i class="fas fa-star text-warning"></i> <a href="/api">API</a> access</li>
+                                    <li><i class="fas fa-star text-warning"></i> Unlimited Access</li>
+                                    <li><i class="fas fa-star text-warning"></i> Automatic profile/group updates</li>
+                                    <li><i class="fas fa-star text-warning"></i> Quicker manual profile updates</li>
+                                    <li><i class="fas fa-star text-warning"></i> Quick add friends</li>
+                                </ul>
                             </div>
                             <a class="card-footer" href="https://www.patreon.com/join/jleagle/checkout?rid=2431320" target="_blank" rel="noopener">Donate</a>
                         </div>
 
                         <div class="card mb-3 mb-lg-0">
                             <h5 class="card-header">Level 3<span class="float-right">$15 <small>/m</small></span></h5>
-                            <div class="card-body p-0">
-                                <table class="table table-no-border m-0">
-                                    <tr>
-                                        <td><i class="fas fa-star text-warning"></i> App Change Webhooks</td>
-                                    </tr>
-                                    <tr>
-                                        <td><i class="fas fa-star text-warning"></i> Influence the Global Steam roadmap</td>
-                                    </tr>
-                                </table>
+                            <div class="card-body">
+                                <ul>
+                                    <li><i class="fas fa-star text-warning"></i> App Change Webhooks</li>
+                                    <li><i class="fas fa-star text-warning"></i> Influence the Global Steam roadmap</li>
+                                </ul>
                             </div>
                             <a class="card-footer" href="https://www.patreon.com/join/jleagle/checkout?rid=2431347" target="_blank" rel="noopener">Donate</a>
                         </div>
@@ -91,6 +71,20 @@
 
                     {{/* Donators */}}
                     <div class="col-12 col-lg-6">
+
+                        <div class="card mb-3">
+                            <div class="card-header">Subscribing will help towards</div>
+                            <div class="card-body">
+                                <ul>
+                                    <li><i class="fas fa-star text-warning"></i> Tracking all currencies</li>
+                                    <li><i class="fas fa-star text-warning"></i> Tracking player bans</li>
+                                    <li><i class="fas fa-star text-warning"></i> Tracking game community items</li>
+                                    <li><i class="fas fa-star text-warning"></i> Predictict game sales</li>
+                                    <li><i class="fas fa-star text-warning"></i> Faster website</li>
+                                    <li><i class="fas fa-star text-warning"></i> Improved Steam authentication</li>
+                                </ul>
+                            </div>
+                        </div>
 
                         <div class="card mb-3">
                             <div class="card-header">Top Donators</div>
