--- a/cmd/frontend/assets/sass/_donate.scss
+++ b/cmd/frontend/assets/sass/_donate.scss
@@ -3,4 +3,18 @@
         height: 36px;
         overflow: hidden;
     }
+
+    ul {
+        list-style: none;
+        padding-left: 0;
+        margin-bottom: 0;
+
+        li {
+            margin-bottom: 8px;
+        }
+
+        li:last-child {
+            margin-bottom: 0;
+        }
+    }
 }
