Only show 10 tags

--- a/cmd/frontend/assets/sass/_app.scss
+++ b/cmd/frontend/assets/sass/_app.scss
@@ -6,6 +6,13 @@
             width: 100%;
         }
 
+        #tags-wrapper {
+            .card-body {
+                overflow: auto;
+                max-height: 270px;
+            }
+        }
+
         #links {
             div {
                 @include clearfix();
