--- a/cmd/frontend/templates/app.gohtml
+++ b/cmd/frontend/templates/app.gohtml
@@ -235,7 +235,7 @@
                                     </div>
                                 {{ end }}
 
-                                <div class="card mt-3">
+                                <div class="card mt-3" id="tags-wrapper">
                                     <h5 class="card-header">Tags</h5>
                                     {{ if gt (len .App.TagCounts) 0 }}
                                         <div class="card-body p-0">
