Update patreon message

--- a/cmd/frontend/assets/sass/_global.scss
+++ b/cmd/frontend/assets/sass/_global.scss
@@ -297,6 +297,17 @@ video {
 }
 
 //
+#patreon-message {
+    display: block;
+    position: relative;
+    color: red;
+    margin-top: -14px;
+    margin-bottom: 4px;
+    text-align: center;
+    text-shadow: 0 0 10px #1b2738, 0 0 10px #1b2738;
+}
+
+//
 .navbar {
 
     padding: 0.5rem 0;
