--- a/cmd/frontend/templates/features.gohtml
+++ b/cmd/frontend/templates/features.gohtml
@@ -23,7 +23,7 @@
 
                 <h5>Players</h5>
                 <ul>
-                    <li>The largest third party Steam player database</li>
+                    <li>The largest third party Steam player ladders</li>
                     <li>Ladders for {{ len .PlayerMetrics }} player metrics</li>
                     <li>Ladders for {{ len .Countries }} countries</li>
                     <li>Achievement tracking</li>
