--- a/cmd/frontend/templates/home.gohtml
+++ b/cmd/frontend/templates/home.gohtml
@@ -100,13 +100,27 @@
                 </div>
             </div>
 
-            <div class="col-12 col-md-6 col-lg-3">
+            <div class="col-12 mb-4 d-none d-lg-block">
+
+                <div class="card">
+                    <div class="card-header">Upcoming Games (Two Weeks)</div>
+                    <div class="card-body">
+                        <div id="followers-wrapper">
+                            <div id="followers"></div>
+                            <div id="followers-legend"></div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
+            <div class="col-12 col-md-6">
                 <div class="card border-0 games mb-4">
                     <h5 class="card-header text-center">Top Games</h5>
                     <div class="card-body p-0">
                         <div class="row no-gutters">
                             {{ range $key, $value := .TopGames }}
-                                <div class="col-6 col-md-12">
+                                <div class="col-6">
                                     <a href="{{ .GetPath }}">
                                         <img src='data:image/svg+xml,%3Csvg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 460 215"%3E%3C/svg%3E' data-lazy="https://images.weserv.nl/?url={{ .GetHeaderImage }}&output=webp" alt="{{ .GetName }}">
                                     </a>
@@ -117,13 +131,13 @@
                     <a class="card-footer text-center" href="/games">More Games</a>
                 </div>
             </div>
-            <div class="col-12 col-md-6 col-lg-3">
+            <div class="col-12 col-md-6 col-lg-3 d-lg-none">
                 <div class="card border-0 games mb-4">
                     <h5 class="card-header text-center">Top New Games</h5>
                     <div class="card-body p-0">
                         <div class="row no-gutters">
                             {{ range $key, $value := .NewGames }}
-                                <div class="col-6 col-md-12">
+                                <div class="col-6">
                                     <a href="{{ .GetPath }}">
                                         <img src='data:image/svg+xml,%3Csvg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 460 215"%3E%3C/svg%3E' data-lazy="https://images.weserv.nl/?url={{ .GetHeaderImage }}&output=webp" alt="{{ .GetName }}">
                                     </a>
@@ -134,13 +148,13 @@
                     <a class="card-footer text-center" href="/games/new-releases">More New</a>
                 </div>
             </div>
-            <div class="col-12 col-md-6 col-lg-3">
+            <div class="col-12 col-md-6 col-lg-3 d-lg-none">
                 <div class="card border-0 games mb-4">
                     <h5 class="card-header text-center">Top Upcoming</h5>
                     <div class="card-body p-0">
                         <div class="row no-gutters">
                             {{ range $key, $value := .Upcoming }}
-                                <div class="col-6 col-md-12">
+                                <div class="col-6">
                                     <a href="{{ .GetPath }}">
                                         <img src='data:image/svg+xml,%3Csvg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 460 215"%3E%3C/svg%3E' data-lazy="https://images.weserv.nl/?url={{ .GetHeaderImage }}&output=webp" alt="{{ .GetName }}">
                                     </a>
@@ -151,13 +165,13 @@
                     <a class="card-footer text-center" href="/games/upcoming">More Upcoming</a>
                 </div>
             </div>
-            <div class="col-12 col-md-6 col-lg-3">
+            <div class="col-12 col-md-6">
                 <div class="card border-0 games mb-4">
                     <h5 class="card-header text-center">Top Sellers</h5>
                     <div class="card-body p-0">
                         <div class="row no-gutters">
                             {{ range .TopSellers }}
-                                <div class="col-6 col-md-12">
+                                <div class="col-6">
                                     {{ if eq .Type $.ConstPackage }}
                                         <div class="type">{{ .Type.String }}</div>
                                     {{ end }}
