--- a/cmd/frontend/templates/player.gohtml
+++ b/cmd/frontend/templates/player.gohtml
@@ -55,21 +55,21 @@
                     <li class="nav-item">
                         <a class="nav-link" data-toggle="tab" href="#stats" role="tab">Library Stats</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" data-toggle="tab" href="#wishlist" role="tab">Wishlist ({{ comma .Player.WishlistAppsCount }})</a>
-                    </li>
+                    {{/*                    <li class="nav-item">*/}}
+                    {{/*                        <a class="nav-link" data-toggle="tab" href="#wishlist" role="tab">Wishlist ({{ comma .Player.WishlistAppsCount }})</a>*/}}
+                    {{/*                    </li>*/}}
                     <li class="nav-item">
                         <a class="nav-link" data-toggle="tab" href="#achievements" role="tab">Achievements ({{ comma .Player.AchievementCount }})</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" data-toggle="tab" href="#friends" role="tab">Friends ({{ comma .Player.FriendsCount }})</a>
-                    </li>
+                    {{/*                    <li class="nav-item">*/}}
+                    {{/*                        <a class="nav-link" data-toggle="tab" href="#friends" role="tab">Friends ({{ comma .Player.FriendsCount }})</a>*/}}
+                    {{/*                    </li>*/}}
                     <li class="nav-item">
                         <a class="nav-link" data-toggle="tab" href="#badges" role="tab">Badges ({{ comma .Player.BadgesCount }})</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" data-toggle="tab" href="#groups" role="tab">Groups ({{ comma .Player.GroupsCount }})</a>
-                    </li>
+                    {{/*                    <li class="nav-item">*/}}
+                    {{/*                        <a class="nav-link" data-toggle="tab" href="#groups" role="tab">Groups ({{ comma .Player.GroupsCount }})</a>*/}}
+                    {{/*                    </li>*/}}
                 </ul>
 
             </div>
