Fix loading style

--- a/cmd/frontend/templates/home.gohtml
+++ b/cmd/frontend/templates/home.gohtml
@@ -256,7 +256,9 @@
             <div class="col-12">
 
                 <div class="card" id="news">
-                    <i class="fas fa-spinner fa-spin"></i>
+                    <div class="card-body">
+                        <i class="fas fa-spinner fa-spin"></i>
+                    </div>
                 </div>
 
             </div>
